--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <a href="https://www.facebook.com/chennagani.Manish/" target="_blank"><img src="./images/facebook.png" alt="Facebook"></a>
                 </div>
                 <div class="social-icon">
-                    <a href="#"><img src="./images/github.png" alt="GitHub"></a>
+                    <a href="https://github.com/Manish-Ch" target="_blank"><img src="./images/github.png" alt="GitHub"></a>
                 </div>
             </div>
         </div>
