--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <h2>This is My First Website</h2>
                 <p>Aspiring to become an Backend Develeper. <br>
                     Bur I don't have any Backend Knowledege &#128557;</p>
-                <a href="./images/Resume.pdf" type="button" class="cta" download="Manish CV">Download Resume</a>
+                <a href="./images/Manish_CV.pdf" type="button" class="cta" download="Manish_CV">Download Resume</a>
             </div>
         </div>
     </section>
