--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <h1 class="section-title">About <span>me</span></h1>
                 <h2>This is My First Website</h2>
                 <p>Aspiring to become an Backend Develeper. <br>
-                    Bur I don't have any Backend Knowledege &#128557;</p>
+                    But I don't have any Backend Knowledege &#128557;</p>
                 <a href="./images/Manish_CV.pdf" type="button" class="cta" download="Manish_CV">Download Resume</a>
             </div>
         </div>
