--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 <div class="project-item">
                     <div class="project-info">
                     <h1>project 2</h1>
-                    <h2>Yet to be completed</h2>
-                    <p>Home Page My Awesome Cart with a good UI. Home Page will contain an animated slider for images banner.    About us page will be available which will describe about the project.     Tracker page will be available in the project. Contact Us page will be available in the project.            I am working on projects. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+                    <h2>Music Website</h2>
+                    <p>Developed a music website that allows users to listen to New Songs and Favorite music. ● JavaScript functions are used for controlling the music playback and seek bars for synchronizing and adjusting the volume. Also used to play the music and switch between songs. Designed and built the website using HTML and CSS, resulting in a responsive and user friendly interface. <strong>Key Skills : <strong>HTML,CSS, JavaScript</p>
                     </div>
                     <div class="project-img">
-                        <img src="./images/coffe.webp" alt="IMHF">
+                        <img src="./images/Music_app.png" alt="MUsic app">
                     </div>
                 </div>
                 <div class="project-item">
