--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 <div class="project-item">
                     <div class="project-info">
                     <h1>project 2</h1>
-                    <h2>Music Website</h2>
-                    <p>Developed a music website that allows users to listen to New Songs and Favorite music. ● JavaScript functions are used for controlling the music playback and seek bars for synchronizing and adjusting the volume. Also used to play the music and switch between songs. Designed and built the website using HTML and CSS, resulting in a responsive and user friendly interface. <strong>Key Skills : <strong>HTML,CSS, JavaScript</p>
+                    <h2>Music Website  (<a href="https://manish-ch.github.io/Music_Website_By_Manish/"> Link </a>)</h2>
+                    <p>● Developed a music website that allows users to listen to New Songs and Favorite music.<br>● JavaScript functions are used for controlling the music playback and seek bars for synchronizing and adjusting the volume. Also used to play the music and switch between songs.<br>● Designed and built the website using HTML and CSS, resulting in a responsive and user friendly interface.<br>● <strong> Key Skills : HTML,CSS, JavaScript</strong></p>
                     </div>
                     <div class="project-img">
-                        <img src="./images/Music_app.png" alt="MUsic app">
+                        <img src="./images/Music_app.png" alt="Music_app">
                     </div>
                 </div>
                 <div class="project-item">
@@ -101,7 +101,7 @@
                 <div class="education-item">
                     <div class="icon"><img src="./images/skill.png" alt="skill_icon"></div>
                     <h2>Skills</h2>
-                    <p><strong>Frontend: </strong> HTML , CSS <br>
+                    <p><strong>Frontend: </strong> HTML , CSS , JavaScript<br>
                         <strong>Backend: </strong>Python , C <br>
                         <strong>Database: </strong>Yet to be completed</p>
                 </div>
